refactor: now runs with Java 1.8, embedding dummy key and cert for signing, first draft of readme